# ros2-kenning-computer-vision-msgs

./: CMakeLists.txt  README.md  package.xml
action/: SegmentationAction.action
include/kenning_computer_vision_msgs/: runtime_msg_type.hpp
msg/: BoxMsg.msg  DepthEstimationMsg.msg  FrameDepthEstimationMsg.msg  FramePoseEstimationMsg.msg  FrameSegmentationMsg.msg  KeyPoint2dMsg.msg  MaskMsg.msg  PoseEstimationMsg.msg  PoseMsg.msg  RuntimeMsgType.msg  RuntimeProtocolMsg.msg  SegmentationMsg.msg  VideoFrameMsg.msg  VideoMsg.msg  VideoSegmentationMsg.msg
srv/: ManageCVNode.srv  RegisterCVNode.srv  RuntimeProtocolSrv.srv  SegmentCVNodeSrv.srv  UnregisterCVNode.srv
